manifests/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-znn-db
  labels:
    app: kube-znn-db
spec:
  selector:
    matchLabels:
      app: kube-znn-db
  template:
    metadata:
      labels:
        app: kube-znn-db
    spec:
      nodeSelector:
        autoscaling.lab/db: "yes"
      volumes:
      - name: init-db-config
        configMap:
          name: init-db-config
      containers:
      - image: mysql:5.6
        name: mysql
        volumeMounts:
        - name: init-db-config
          mountPath: /docker-entrypoint-initdb.d
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "128m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
