manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-znn
  labels:
    app: kube-znn
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: kube-znn
  type: ClusterIP
